Gipuma kernel and basic demo for multi-view depth from stereo

--- a/stdlib/CMakeLists.txt
+++ b/stdlib/CMakeLists.txt
@@ -6,6 +6,7 @@ option(BUILD_CAFFE_OPS "" ON)
 option(BUILD_CPM2_OPS "" OFF)
 option(BUILD_MOTION_OPS "" ON)
 option(BUILD_OPENFACE_OPS "" OFF)
+option(BUILD_GIPUMA_OPS "" OFF)
 
 set(STDLIB_LIBRARIES)
 set(OPENCV_MAJOR_VERSION 3)
@@ -57,6 +58,11 @@ endif()
 if (BUILD_OPENFACE_OPS)
   add_subdirectory(openface)
   list(APPEND TARGETS openface)
+endif()
+
+if (BUILD_GIPUMA_OPS)
+  add_subdirectory(gipuma)
+  list(APPEND TARGETS gipuma)
 endif()
 
 if (BUILD_MOTION_OPS)
