--- a/stdlib/imgproc/CMakeLists.txt
+++ b/stdlib/imgproc/CMakeLists.txt
@@ -2,12 +2,14 @@ set(SOURCE_FILES
   blur_kernel_cpu.cpp
   histogram_kernel_cpu.cpp
   image_encoder_kernel_cpu.cpp
-  image_decoder_kernel_cpu.cpp)
+  image_decoder_kernel_cpu.cpp
+  resize_kernel_cpu.cpp)
 
 if (BUILD_CUDA)
   list(APPEND SOURCE_FILES
     histogram_kernel_gpu.cpp
-    montage_kernel_gpu.cpp)
+    montage_kernel_gpu.cpp
+    resize_kernel_gpu.cpp)
     #feature_extractor_kernel.cpp
     #feature_matcher_kernel.cpp)
 endif()
