Added new Python op interface

--- a/stdlib/CMakeLists.txt
+++ b/stdlib/CMakeLists.txt
@@ -112,3 +112,9 @@ if (HALIDE_TARGETS)
     target_link_libraries(stdlib PRIVATE scanner_halide)
   endif()
 endif()
+
+find_package(Boost COMPONENTS thread program_options regex python REQUIRED)
+target_link_libraries(stdlib PUBLIC
+  "${Boost_LIBRAIRES}"
+  "${BOOST_ROOT}/lib/libboost_numpy.so")
+target_include_directories(stdlib PUBLIC "${Boost_INCLUDE_DIRS}")
