Added GPU JPEG decode

--- a/stdlib/imgproc/CMakeLists.txt
+++ b/stdlib/imgproc/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 
 add_library(imgproc OBJECT ${SOURCE_FILES})
 
-list(APPEND OPENCV_COMPONENTS core highgui imgproc xfeatures2d cudafeatures2d)
+list(APPEND OPENCV_COMPONENTS core highgui imgproc xfeatures2d cudafeatures2d cudacodec)
 set(OPENCV_COMPONENTS ${OPENCV_COMPONENTS} PARENT_SCOPE)
 
 set(STDLIB_LIBRARIES ${STDLIB_LIBRARIES} PARENT_SCOPE)
