--- a/stdlib/imgproc/CMakeLists.txt
+++ b/stdlib/imgproc/CMakeLists.txt
@@ -8,7 +8,8 @@ set(SOURCE_FILES
 if (BUILD_CUDA)
   list(APPEND SOURCE_FILES
     histogram_kernel_gpu.cpp
-    montage_kernel_gpu.cpp)
+    montage_kernel_gpu.cpp
+   image_decoder_kernel_gpu.cpp)
     #feature_extractor_kernel.cpp
     #feature_matcher_kernel.cpp)
 endif()
