Factor out video index entry for use in other places

--- a/scanner/engine/CMakeLists.txt
+++ b/scanner/engine/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
   master.cpp
   worker.cpp
   ingest.cpp
+  video_index_entry.cpp
   load_worker.cpp
   evaluate_worker.cpp
   save_worker.cpp
