Fix frcnn output kernel and add obj detection example

--- a/nets/faster_rcnn_coco.toml
+++ b/nets/faster_rcnn_coco.toml
@@ -5,6 +5,7 @@
     output_layers = ["cls_prob", "rois", "fc7"]
     # output_layers = ["fc7"]
     normalize = false
+    uses_python = true
 
     [net.input]
         dimensions = [
