--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 
 install:
 - sudo apt-get install -y doxygen graphviz python-pip
-- pip install doxypypy twine
+- pip install requests[security] doxypypy twine
 
 script: ./scripts/travis-build.sh
 
