WIP partitioning output rows based on slices
Curently restricting to only one slice and disallowing any operations
after an unslice to allow scheduling to look similar to task execution model.

--- a/scanner/engine/CMakeLists.txt
+++ b/scanner/engine/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE_FILES
   evaluate_worker.cpp
   save_worker.cpp
   sampler.cpp
+  dag_analysis.cpp
   metadata.cpp
   kernel_registry.cpp
   op_registry.cpp
