Specify output table by op_args, more work on tutorials + tests

--- a/stdlib/misc/CMakeLists.txt
+++ b/stdlib/misc/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE_FILES
   info_from_frame_kernel.cpp
   discard_kernel.cpp
-  sleep_kernel.cpp)
+  sleep_kernel.cpp
+  test_increment_kernel.cpp)
 
 add_library(misc OBJECT ${SOURCE_FILES})
