Update montage example and add montage cpu kernel

--- a/stdlib/imgproc/CMakeLists.txt
+++ b/stdlib/imgproc/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE_FILES
   blur_kernel_cpu.cpp
   histogram_kernel_cpu.cpp
+  montage_kernel_cpu.cpp
   image_encoder_kernel_cpu.cpp
   image_decoder_kernel_cpu.cpp
   resize_kernel.cpp)
