--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 install:
 - sudo add-apt-repository -y ppa:jonathonf/python-2.7
 - sudo apt-get update
-- sudo apt-get install -y doxygen graphviz python-pip python2.7
+- sudo apt-get install -y doxygen graphviz python2.7
 - which pip
 - which python
 - python --version
