Attempt to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 - sudo apt-get update
 - sudo apt-get install -y doxygen graphviz python2.7
 - sudo pip install requests[security] --upgrade
-- pip install doxypypy twine
+- sudo pip install doxypypy twine
 
 script: ./scripts/travis-build.sh
 
