Update pipeline file, add resnet example

--- a/nets/resnet.toml
+++ b/nets/resnet.toml
@@ -15,9 +15,9 @@
             "width",
         ]
         channel_ordering = [
-            "blue"
-            "green"
-            "red"
+            "blue",
+            "green",
+            "red",
         ]
 
 [mean-image]
