Add facenet CPU support

--- a/stdlib/caffe/CMakeLists.txt
+++ b/stdlib/caffe/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCE_FILES
   caffe_kernel_cpu.cpp
   caffe_input_kernel.cpp
   caffe_input_kernel_cpu.cpp
+  facenet_input_kernel_cpu.cpp
   facenet_output_kernel_cpu.cpp
   yolo_output_kernel_cpu.cpp
   faster_rcnn_kernel.cpp
