--- a/docker/ubuntu16.04/Dockerfile.gpu
+++ b/docker/ubuntu16.04/Dockerfile.gpu
@@ -8,7 +8,7 @@ ARG cores=1
 WORKDIR ${deps}
 
 WORKDIR /opt/scanner
-RUN bash deps.sh --install-all --prefix=/usr/local --use-gpu
+RUN bash ./deps.sh --install-all --prefix /usr/local --use-gpu
 
 ENV LD_LIBRARY_PATH /usr/local/intel/mkl/lib:${LD_LIBRARY_PATH}
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
