--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -16,6 +16,6 @@ RUN cd /opt/scanner && \
           -D BUILD_CUDA=${gpu} \
           .. && \
     make -j ${cores} && \
-    cd .. && python python/setup.py && \
+    cd .. && rm -fr python/scannerpy/build && python python/setup.py && \
     pip install dist/scannerpy-0.1.13-py2-none-any.whl
 ENV PYTHONPATH=/opt/scanner/python:$PYTHONPATH
