--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -8,7 +8,7 @@ ADD . /opt/scanner
 WORKDIR /opt/scanner
 ENV Caffe_DIR /usr/local
 ENV LD_LIBRARY_PATH \
-       "/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs:$LD_LIBRARY_PATH"
+       "/usr/local/cuda/lib64:$LD_LIBRARY_PATH:/usr/local/cuda/lib64/stubs"
 RUN cd /opt/scanner && \
     mkdir build && cd build && \
     cmake -D BUILD_IMGPROC_OPS=ON \
