--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -39,5 +39,5 @@ RUN wget "https://cmake.org/files/v3.8/cmake-3.8.1.tar.gz" && \
 ADD requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-WORKDIR /
-ADD . /opt/scanner
+WORKDIR /opt/scanner-base
+ADD deps.sh .
