--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -25,7 +25,6 @@ ENV CUDA_LIB_PATH /usr/local/cuda/lib64/stubs
 
 # Non-apt-installable dependencies
 ENV deps /deps
-RUN mkdir ${deps}
 WORKDIR ${deps}
 
 # CMake
@@ -36,8 +35,6 @@ RUN wget "https://cmake.org/files/v3.8/cmake-3.8.1.tar.gz" && \
     rm -rf ${deps}/cmake-3.8.1.tar.gz ${deps}/cmake-3.8.1
 
 # Python dependencies
-ADD requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
-
 WORKDIR /opt/scanner-base
-ADD deps.sh .
+ADD . .
+RUN pip install --upgrade pip && pip install -r requirements.txt
