--- a/docker/ubuntu16.04/Dockerfile.cpu
+++ b/docker/ubuntu16.04/Dockerfile.cpu
@@ -5,9 +5,8 @@ FROM ${base_tag}
 MAINTAINER Will Crichton "wcrichto@cs.stanford.edu"
 ARG cores=1
 
-WORKDIR /opt/scanner
 RUN bash ./deps.sh --install-all --prefix /usr/local && \
-    rm -rf /opt/scanner
+    rm -rf /opt/scanner-base
 
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
 ENV PYTHONPATH /usr/local/lib/python2.7/site-packages:${PYTHONPATH}
