--- a/docker/ubuntu16.04/Dockerfile.gpu
+++ b/docker/ubuntu16.04/Dockerfile.gpu
@@ -5,7 +5,8 @@ FROM ${base_tag}
 MAINTAINER Will Crichton "wcrichto@cs.stanford.edu"
 ARG cores=1
 
-RUN bash ./deps.sh --install-all --prefix /usr/local --use-gpu
+RUN bash ./deps.sh --install-all --prefix /usr/local --use-gpu && \
+    rm -rf /opt/scanner-base
 
 ENV LD_LIBRARY_PATH /usr/local/intel/mkl/lib:${LD_LIBRARY_PATH}
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
