Remove user_function from cmake

--- a/scanner/api/CMakeLists.txt
+++ b/scanner/api/CMakeLists.txt
@@ -2,8 +2,7 @@ set(SOURCE_FILES
   frame.cpp
   kernel.cpp
   op.cpp
-  database.cpp
-  user_function.cpp)
+  database.cpp)
 
 add_library(api OBJECT
   ${SOURCE_FILES})
