Switch docs to sphinx

--- a/sphinx/Makefile
+++ b/sphinx/Makefile
@@ -6,7 +6,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = scanner
 SOURCEDIR     = .
-BUILDDIR      = _build
+BUILDDIR      = ../build/doc
 
 # Put it first so that "make" without argument is like "make help".
 help:
