Fix '-g' not being specified when building GPU docker image

--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -3,6 +3,7 @@ FROM scannerresearch/scanner-base:ubuntu16.04-${tag}
 MAINTAINER Will Crichton "wcrichto@cs.stanford.edu"
 ARG cores=1
 ARG gpu=ON
+ARG deps_opt=''
 
 ADD . /opt/scanner
 WORKDIR /opt/scanner
@@ -10,7 +11,7 @@ ENV Caffe_DIR /usr/local
 ENV LD_LIBRARY_PATH \
        "/usr/local/cuda/lib64:$LD_LIBRARY_PATH:/usr/local/cuda/lib64/stubs"
 RUN cd /opt/scanner && \
-    (bash deps.sh --install-none --prefix /usr/local) && \
+    (bash deps.sh --install-none --prefix /usr/local ${deps_opt}) && \
     mkdir build && cd build && \
     cmake -D BUILD_IMGPROC_OPS=ON \
           -D BUILD_CAFFE_OPS=ON \
