Update travis to build multiple cuda versions

--- a/docker/ubuntu16.04/Dockerfile.gpu9
+++ b/docker/ubuntu16.04/Dockerfile.gpu9
@@ -1,13 +1,13 @@
-# Scanner base GPU image for Ubuntu 16.04
+# Scanner base GPU image for Ubuntu 16.04 CUDA 9.X
 
 ARG base_tag
 FROM ${base_tag}
 MAINTAINER Will Crichton "wcrichto@cs.stanford.edu"
 ARG cores=1
 
-ADD thirdparty/resources/cuda/libnvcuvid.so.367.48 /usr/lib/x86_64-linux-gnu/libnvcuvid.so
-RUN ln -s /usr/local/cuda-8.0/targets/x86_64-linux/lib/stubs/libcuda.so \
-       /usr/local/cuda-8.0/targets/x86_64-linux/lib/stubs/libcuda.so.1
+ADD thirdparty/resources/cuda/libnvcuvid.so.387.26 /usr/lib/x86_64-linux-gnu/libnvcuvid.so
+RUN ln -s /usr/local/cuda/targets/x86_64-linux/lib/stubs/libcuda.so \
+       /usr/local/cuda/targets/x86_64-linux/lib/stubs/libcuda.so.1
 ENV CUDA_LIB_PATH /usr/local/cuda/lib64/stubs
 
 RUN bash ./deps.sh --install-all --prefix /usr/local --use-gpu && \
