--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -18,18 +18,19 @@ RUN apt-get update && apt-get upgrade -y && \
     libpng-dev libjpeg-dev libbz2-dev git python-pip wget \
     libleveldb-dev libsnappy-dev libhdf5-serial-dev liblmdb-dev python-dev \
     llvm clang python-tk autoconf autogen libtool libtbb-dev libopenblas-dev \
-    liblapacke-dev swig yasm python2.7 cpio curl unzip
+    liblapacke-dev swig yasm python2.7 cpio curl unzip openssl libssl-dev
 
 # Non-apt-installable dependencies
 ENV deps /deps
 WORKDIR ${deps}
 
-# CMake
-RUN wget "https://cmake.org/files/v3.8/cmake-3.8.1.tar.gz" && \
-    tar -xf cmake-3.8.1.tar.gz && cd ${deps}/cmake-3.8.1 && \
-    ./bootstrap --parallel=${cores} && \
-    make install -j${cores} && \
-    rm -rf ${deps}/cmake-3.8.1.tar.gz ${deps}/cmake-3.8.1
+# CMake (we use 3.7 because >3.8 has issues building OpenCV due to http_proxy)
+RUN wget "https://cmake.org/files/v3.7/cmake-3.7.0.tar.gz" && \
+    tar -xf cmake-3.7.0.tar.gz && cd ${deps}/cmake-3.7.0 && \
+    ./bootstrap --parallel=${cores} -- -DCMAKE_USE_OPENSSL=ON && \
+    make -j${cores} && \
+    make install && \
+    rm -rf ${deps}/cmake-3.7.0.tar.gz ${deps}/cmake-3.7.0
 
 # Python dependencies
 WORKDIR /opt/scanner-base
