--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -9,7 +9,7 @@ ADD . /opt/scanner
 WORKDIR /opt/scanner
 ENV Caffe_DIR /usr/local
 ENV LD_LIBRARY_PATH \
-       "/usr/local/cuda/lib64:$LD_LIBRARY_PATH:/usr/local/cuda/lib64/stubs"
+       "/usr/lib/x86_64-linux-gnu:/usr/local/cuda/lib64:$LD_LIBRARY_PATH:/usr/local/cuda/lib64/stubs"
 RUN cd /opt/scanner && \
     (bash deps.sh --install-none --prefix /usr/local ${deps_opt}) && \
     mkdir build && cd build && \
@@ -19,7 +19,4 @@ RUN cd /opt/scanner && \
           -D BUILD_TESTS=ON \
           -D BUILD_CUDA=${gpu} \
           .. && \
-    make -j ${cores} && \
-    cd .. && rm -fr python/scannerpy/build && \
-    python python/setup.py bdist_wheel && \
-    pip install dist/scannerpy-0.1.13-py2-none-any.whl
+    cd .. && ./build.sh
