--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -18,7 +18,7 @@ RUN apt-get update && apt-get upgrade -y && \
     libleveldb-dev libsnappy-dev libhdf5-serial-dev liblmdb-dev  \
     llvm clang autoconf autogen libtool libtbb-dev libopenblas-dev \
     liblapacke-dev swig yasm cpio curl unzip openssl libssl-dev \
-    libgl-dev libcap-dev python3-dev
+    libgl-dev libcap-dev python3-dev python3-pip
 
 # Non-apt-installable dependencies
 ENV deps /deps
@@ -35,4 +35,4 @@ RUN wget "https://cmake.org/files/v3.7/cmake-3.7.0.tar.gz" && \
 # Python dependencies
 WORKDIR /opt/scanner-base
 ADD . .
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
