--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get upgrade -y && \
     llvm clang autoconf autogen libtool libtbb-dev libopenblas-dev \
     liblapacke-dev swig yasm cpio curl unzip openssl libssl-dev \
     libgl-dev libcap-dev python3-dev python3-pip
+RUN apt-get install -y --no-install-recommends libboost-all-dev
 
 # Non-apt-installable dependencies
 ENV deps /deps
@@ -36,3 +37,5 @@ RUN wget "https://cmake.org/files/v3.7/cmake-3.7.0.tar.gz" && \
 WORKDIR /opt/scanner-base
 ADD . .
 RUN pip3 install -r requirements.txt
+
+ENV NVIDIA_DRIVER_CAPABILITIES compute,utility,video
