Set locales to work with py3

--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -20,3 +20,6 @@ RUN cd /opt/scanner && \
           -D BUILD_CUDA=${gpu} \
           .. && \
     cd .. && ./build.sh
+
+ENV LC_ALL C.UTF-8
+ENV LANG C.UTF-8
