--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 - sudo apt-get update
 - sudo apt-get install -y doxygen graphviz
 - pip3 install requests[security] --upgrade
-- pip3 install doxypypy twine Sphinx sphinx_rtd_theme
+- pip3 install doxypypy twine Sphinx sphinx_readable_theme
 
 script: ./scripts/travis-build.sh
 
