--- a/docker/ubuntu16.04/Dockerfile.base
+++ b/docker/ubuntu16.04/Dockerfile.base
@@ -11,14 +11,21 @@ RUN apt-get update && apt-get upgrade -y && \
     apt-get install -y software-properties-common && \
     add-apt-repository -y ppa:git-core/ppa && \
     apt-get update && \
-    apt-get install -y libssl-dev libcurl3-dev liblzma-dev libeigen3-dev  \
-    libgoogle-glog-dev libatlas-base-dev libsuitesparse-dev libgflags-dev \
-    libx264-dev libopenjpeg-dev libxvidcore-dev \
-    libpng-dev libjpeg-dev libbz2-dev git wget \
-    libleveldb-dev libsnappy-dev libhdf5-serial-dev liblmdb-dev  \
-    llvm clang autoconf autogen libtool libtbb-dev libopenblas-dev \
-    liblapacke-dev swig yasm cpio curl unzip openssl libssl-dev \
-    libgl-dev libcap-dev python3-dev python3-pip libgnutls-dev
+    apt-get install -y \
+      build-essential \
+      git libgtk2.0-dev pkg-config unzip llvm-5.0-dev clang-5.0 libc++-dev \
+      libgflags-dev libgtest-dev libssl-dev libcurl3-dev liblzma-dev \
+      libeigen3-dev libgoogle-glog-dev libatlas-base-dev libsuitesparse-dev \
+      libgflags-dev libx264-dev libopenjpeg-dev libxvidcore-dev \
+      libpng-dev libjpeg-dev libbz2-dev python-pip wget \
+      libleveldb-dev libsnappy-dev libhdf5-serial-dev liblmdb-dev python-dev \
+      python-tk autoconf autogen libtool libtbb-dev libopenblas-dev \
+      liblapacke-dev swig yasm python3.5 python3-pip cpio automake libass-dev \
+      libfreetype6-dev libsdl2-dev libtheora-dev libtool \
+      libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev \
+      libxcb-xfixes0-dev mercurial texinfo zlib1g-dev curl libcap-dev \
+      libgnutls-dev
+
 RUN apt-get install -y --no-install-recommends libboost-all-dev
 
 # Non-apt-installable dependencies
