--- a/docker/ubuntu16.04/Dockerfile.cpu
+++ b/docker/ubuntu16.04/Dockerfile.cpu
@@ -10,5 +10,6 @@ RUN bash ./deps.sh --install-all --prefix /usr/local && \
 
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
 ENV PYTHONPATH /usr/local/lib/python3.5/site-packages:${PYTHONPATH}
+ENV PYTHONPATH /usr/local/lib/python3.5/dist-packages:${PYTHONPATH}
 
 WORKDIR /
