--- a/docker/ubuntu16.04/Dockerfile.gpu9
+++ b/docker/ubuntu16.04/Dockerfile.gpu9
@@ -16,5 +16,6 @@ RUN bash ./deps.sh --install-all --prefix /usr/local --use-gpu && \
 ENV LD_LIBRARY_PATH /usr/local/intel/mkl/lib:${LD_LIBRARY_PATH}
 ENV PYTHONPATH /usr/local/python:${PYTHONPATH}
 ENV PYTHONPATH /usr/local/lib/python3.5/site-packages:${PYTHONPATH}
+ENV PYTHONPATH /usr/local/lib/python3.5/dist-packages:${PYTHONPATH}
 
 WORKDIR /
