Initial SQL source implementation

--- a/stdlib/misc/CMakeLists.txt
+++ b/stdlib/misc/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
   packed_file_source.cpp
   pass_kernel.cpp
   files_source.cpp
-  files_sink.cpp)
+  files_sink.cpp
+  sql_source.cpp)
 
 add_library(misc OBJECT ${SOURCE_FILES})
