--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ipython==5.3.0
-numpy==1.12.0
+numpy==1.14.0
 protobuf==3.4.0
 toml==0.9.2
 youtube-dl
@@ -17,3 +17,5 @@ storehouse
 ipaddress==1.0.18
 plotly==2.0.6
 jupyter==1.0.0
+psycopg2==2.7.4
+testing.postgresql==1.3.0
