--- a/docker/Dockerfile.scanner
+++ b/docker/Dockerfile.scanner
@@ -10,6 +10,7 @@ WORKDIR /opt/scanner
 ENV Caffe_DIR /usr/local
 ENV LD_LIBRARY_PATH \
        "/usr/lib/x86_64-linux-gnu:/usr/local/cuda/lib64:$LD_LIBRARY_PATH:/usr/local/cuda/lib64/stubs"
+ENV PKG_CONFIG_PATH "/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH"
 RUN cd /opt/scanner && \
     (bash deps.sh --install-none --prefix /usr/local ${deps_opt}) && \
     mkdir build && cd build && \
