Workaround pybind bug, update tf example, quickstart, pysource
* pybind11 has a bug where the code to acquire the GIL might execute python
  code before acquiring the GIL.. inserted hack to fix this

* Update tf example to latest API

* Update quickstart to show multiple jobs and mention TF

* Add Python Source for feeding data from python lists

--- a/stdlib/misc/CMakeLists.txt
+++ b/stdlib/misc/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCE_FILES
   test_increment_kernel.cpp
   packed_file_source.cpp
   pass_kernel.cpp
+  python_source.cpp
   files_source.cpp
   files_sink.cpp
   sql_source.cpp
