Default to debug mode on Mac due to pybind release mode bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,14 @@ set(GLOBAL_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(THIRDPARTY_SOURCE_DIR "${CMAKE_SOURCE_DIR}/thirdparty")
 set(THIRDPARTY_OUTPUT_PATH "${THIRDPARTY_SOURCE_DIR}/build/bin")
 
-if (NOT CMAKE_BUILD_TYPE)
+if(APPLE)
+  message(STATUS "Non-debug builds fail on MacOS. Setting to debug.")
+  set(CMAKE_BUILD_TYPE "Debug")
+elseif(UNIX)
+  if (NOT CMAKE_BUILD_TYPE)
     message(STATUS "No build type selected, defaulting to Release")
     set(CMAKE_BUILD_TYPE "Release")
+  endif()
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
